Отъезд минифицированных стилей в index

--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
- a {
+.link {
   color: #007bff;
   text-decoration: none;
   background-color: transparent;
@@ -101,7 +101,7 @@ html body * {
   color: #fff;
 }
 
-.Body-container p {
+.Body-text {
   line-height: 1.6;
   font-size: 20px;
   font-weight: 100;
@@ -109,7 +109,7 @@ html body * {
   margin: 18px auto;
 }
 
-.Body-container strong {
+.Body-strong {
   font-weight: 700;
 }
 
@@ -167,6 +167,6 @@ html body * {
   color: #fff;
 }
 
-.Footer-footer a {
+.Footer-link {
   color: inherit;
 }
