--- a/public/style.css
+++ b/public/style.css
@@ -64,7 +64,7 @@ html body * {
   top: 0;
   left: 0;
   z-index: 0;
-  background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI0IiBoZWlnaHQ9IjQiPjxwYXRoIGZpbGwtb3BhY2l0eT0iLjQiIGQ9Ik0wIDBoMnYySDB6TTIgMmgydjJIMnoiLz48L3N2Zz4=) 50% rgba(0, 0, 0, .4);
+  background: url('overlay_bg.min.svg') 50% rgba(0, 0, 0, .4);
 }
 
 .Header-wrapper {
@@ -138,7 +138,7 @@ html body * {
 }
 
 .Body-img {
-  width: calc(100% / 3);
+  width: 33%;
   height: 280px;
   margin-bottom: 20px;
   flex-grow: 1;
@@ -150,7 +150,7 @@ html body * {
   justify-content: center;
 }
 
-.Body-title small {
+.Body-small {
   line-height: 1.4;
   font-size: 34px;
   font-weight: 100;
